--- a/css/screen.css
+++ b/css/screen.css
@@ -605,7 +605,10 @@ input::placeholder {
 */
 
 .c-form-field--option {
-    display: flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: block;
+    -ms-align-items: center;
     align-items: center;
 }
 
@@ -659,16 +662,29 @@ input::placeholder {
     margin-bottom: 12px;
 }
 
-.c-option--hidden:checked + .c-custom-option .c-custom-option__symbol{
-    opacity: 1;
-    transition: all var(--transition-alpha);
-    transform: scale(1.1);
+.c-option--hidden:checked + .c-custom-toggle .c-custom-toggle__fake-input{
+    background-color: var(--global-color-alpha);
+    border-color: var(--global-color-alpha-dark);
+}
+
+.c-option--hidden:checked + .c-custom-toggle .c-custom-toggle__fake-input::after{
+    transform: translate(24px,0);
+}
+
+/* focused and active state */
+
+.c-option--hidden:focus + .c-custom-toggle .c-custom-toggle__fake-input,
+.c-option--hidden:active + .c-custom-toggle .c-custom-toggle__fake-input {
+    border-color: var(--color-alpha-x-light);
+    box-shadow: var(--focus-shadow);
 }
 
 
 
 .c-custom-option{
     display: flex;
+    --custom-option-borderColor: var(--global-input-borderColor);
+    --custom-option-focus-borderColor: var(--global-input-focus-borderColor);
 
 }
 
@@ -676,13 +692,14 @@ input::placeholder {
     display: flex;
     width: 16px;
     height: 16px;
-    border: 1px solid var(--global-color-neutral-xxx-light);
     margin-right: 8px;
+    border: 1px solid var(--custom-option-borderColor);
 }
 
 .c-custom-option__fake-input:hover{
     border: 1px solid var(--global-color-alpha-light);
     box-shadow: var(--focus-shadow);
+    --custom-option-borderColor: var(--custom-option-hover-borderColor);
 }
 
 .c-custom-option__fake-input:active{
@@ -725,6 +742,59 @@ input::placeholder {
     background-color: var(--global-color-alpha);
     margin: auto;
     border-radius: 100%;
+}
+
+.c-custom-toggle{
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -ms-align-items: center;
+    align-items: center;
+}
+
+.c-custom-toggle--inverted{
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+.c-custom-toggle--inverted .c-custom-toggle__fake-input{
+    margin-right: 0;
+    margin-left: 8px;
+}
+
+.c-custom-toggle__fake-input{
+    display: block;
+    height: 24px;
+    width: 48px;
+    margin-right: 16px;
+    background-color: var(--global-color-neutral-xxxx-light);
+    border-radius: 32px;
+    border: 1px solid var(--global-color-neutral-xxx-light);
+    transition: all var(--transition-alpha);
+}
+
+.c-custom-toggle__fake-input::after{
+    display: block;
+    content: '';
+    height: 22px;
+    width: 22px;
+    border-radius: 100%;
+    box-shadow: 0 1px 3px 1px rgba(0,0,0,.2);
+    background-color: #fff;
+    transition: all var(--transition-alpha);
+}
+
+.c-toggle-list__item{
+    margin-bottom: 12px;
+    padding-top: 12px;
+}
+
+.c-toggle-list__item + .c-toggle-list__item {
+    margin-bottom: 0;
+    padding-bottom: 12px;
+    border-top: #0000001a 1px solid;
 }
 /*
     Component: Label
